# Liquid-State-Engine

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_LOG.md  DEVELOPMENT_LOG_LITE.md  PROJECT_SUMMARY.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.local.json
.kiro/steering/: project-rules.md
examples/: data-workflow.html
scripts/: collab-server.js  serve.js  test-ai.js  validate.js
src/: ecs.rs  lib.rs  physics.rs  quadtree.rs  relations.rs  renderer.rs  spatial_grid.rs
web/: ai-enrich.js  ai-memory.js  ai-suggest.js  audio.js  collab.js  curiosity.js  index.html  main.js  meta-learner.js  ontology.js  particles.js  payload.js  persistence.js  relations-viz.js  rules.js  semantic-space.js  style.css  tension-detector.js  trails.js  worker-engine.js  worker.js
web/hud/: app.js  style.css
