[package]
name = "liquid-state-engine"
version = "0.1.0"
edition = "2021"
description = "Interactive Visual Computing Platform - CPU-only, DOM-free rendering engine"
authors = ["Liquid-State Engine Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
